home-server/k8s/traefik-crd.yaml
# kubectl apply -k https://github.com/traefik/traefik-helm-chart/traefik/crds/
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    app: traefik
