home-server/k8s/02-inadyn.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inadyn
  namespace: traefik-system
  labels:
    app: inadyn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inadyn
  template:
    metadata:
      labels:
        app: inadyn
    spec:
      volumes:
      - name: config
        configMap:
          name: inadyn-config
          items:
          - key: "templ.conf"
            path: "templ.conf"
      containers:
      - name: inadyn
        image: alpine:3.18
        command:
        - "sh"
        - "-c"
        - |
          apk add inadyn
          cat /etc/inadyn/templ.conf | sed "s/cloudflare-token/${CF_DNS_API_TOKEN}/g" > /root/config.conf
          exec inadyn --foreground --no-pidfile -f /root/config.conf
        volumeMounts:
        - name: config
          mountPath: "/etc/inadyn/"
