home-server/k8s/02-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: wan-auth
  namespace: traefik-system
  labels:
    app: traefik
spec:
  basicAuth:
    secret: wan-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wan-auth
  namespace: traefik-system
  labels:
    app: traefik
spec:
  basicAuth:
    secret: wan-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: traefik-system
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      volumes:
        - name: acme
          hostPath:
            path: "/var/run/acme.json"
            type: FileOrCreate
        - name: config
          configMap:
            name: traefik-config
            items:
              - key: "config.yaml"
                path: "config.yaml"
              - key: "routes.yaml"
                path: "routes.yaml"
      containers:
        - name: traefik
          image: traefik:v2.10
          command:
            - /bin/sh
            - -c
            - |
              chmod 0600 /var/run/acme.json
              exec traefik --configfile /etc/traefik/config.yaml
          volumeMounts:
            - name: acme
              mountPath: "/var/run/acme.json"
            - name: config
              mountPath: "/etc/traefik/"
          ports:
            - name: lan
              containerPort: 80
            - name: lansecure
              containerPort: 443
            - name: wan
              containerPort: 880
            - name: wansecure
              containerPort: 8443
          livenessProbe:
            httpGet:
              scheme: HTTP
              host: health.zhaohai.li
              path: /ping
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik-system
  labels:
    app: traefik
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.10.3
spec:
  type: LoadBalancer
  ports:
    - name: lan
      targetPort: lan
      port: 80
    - name: lansecure
      targetPort: lansecure
      port: 443
    - name: wan
      targetPort: wan
      port: 880
    - name: wansecure
      targetPort: wansecure
      port: 8443
  selector:
    app: traefik
