home-server/k8s/90-tinyfilemanager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyfilemanager
  labels:
    app: tinyfilemanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyfilemanager
  template:
    metadata:
      labels:
        app: tinyfilemanager
    spec:
      volumes:
      - name: fs
        hostPath:
          path: "/mnt/multimedia/"
          type: Directory
      - name: config
        configMap:
          name: tinyfilemanager-config
          items:
          - key: "config.php"
            path: "config.php"
      containers:
      - name: tinyfilemanager
        image: tinyfilemanager/tinyfilemanager:2.4.7
        command:
        - "sh"
        - "-c"
        - |
          cp /etc/tinyfilemanager/config.php /var/www/html/config.php
          exec php -S 0.0.0.0:80
        volumeMounts:
        - name: fs
          mountPath: "/mnt/multimedia"
        - name: config
          mountPath: "/etc/tinyfilemanager/"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tinyfilemanager-service
  labels:
    app: tinyfilemanager
spec:
  ports:
  - targetPort: 80
    port: 80
  selector:
    app: tinyfilemanager
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyfilemanager
  labels:
    app: tinyfilemanager
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: lansecure
spec:
  rules:
  - host: "fs.zhaohai.li"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tinyfilemanager-service
            port:
              number: 80
